<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">V Switch</string>
    <string name="navigation_drawer_open">Open navigation menu</string>
    <string name="navigation_drawer_close">Close navigation menu</string>
    <string name="menu_configurations">Configurations</string>
    <string name="menu_local_commands">Local commands</string>
    <string name="menu_cloud_commands">Cloud commands</string>
    <string name="local_commands_title">Local commands</string>
    <string name="cloud_commands_title">Cloud commands</string>
    <string name="turn_on_switch_1">Turn on switch 1</string>
    <string name="turn_off_switch_1">Turn off switch 1</string>
    <string name="turn_on_switch_2">Turn on switch 2</string>
    <string name="turn_off_switch_2">Turn off switch 2</string>
    <string name="turn_on_switch_3">Turn on switch 3</string>
    <string name="turn_off_switch_3">Turn off switch 3</string>
    <string name="turn_on_switch_4">Turn on switch 4</string>
    <string name="turn_off_switch_4">Turn off switch 4</string>
    <string name="screen_title">Device WiFi setup</string>
    <string name="saved_serial_label">Saved device serial</string>
    <string name="no_serial_saved">None</string>
    <string name="username_hint">Username (home WiFi SSID)</string>
    <string name="password_hint">Password (home WiFi password)</string>
    <string name="configure_wifi">Configure wifi</string>
    <string name="enroll">Enroll</string>
    <string name="error_not_on_wifi">Connect to WiFi first.</string>
    <string name="error_wrong_hotspot">Connect to an IoT_ device hotspot first.</string>
    <string name="error_empty_credentials">Enter username and password.</string>
    <string name="error_location_permission">Location permission is required to read the WiFi network name.</string>
    <string name="success_wifi_configured">WiFi is configured.</string>
    <string name="error_configure_failed">Configuration failed (HTTP %1$d).</string>
    <string name="error_network">Could not reach the device. Check you are on the IoT hotspot.</string>
    <string name="configuring">Configuring…</string>
    <string name="enrolling">Enrolling…</string>
    <string name="success_enrolled">Device enrolled.</string>
    <string name="error_enroll_failed">Enrollment failed (HTTP %1$d).</string>
    <string name="error_enroll_network">Could not reach the device. Check you are on the same WiFi network.</string>
    <string name="error_no_serial_for_enroll">No saved serial number. Configure WiFi first.</string>
    <string name="error_no_serial_for_switch">No saved serial number. Configure WiFi first.</string>
    <string name="success_switch_on">Switch %1$d turned on.</string>
    <string name="success_switch_off">Switch %1$d turned off.</string>
    <string name="error_switch_failed">Switch command failed (HTTP %1$d).</string>
    <string name="error_switch_network">Could not reach the device. Check you are on the same WiFi network.</string>
</resources>
